--- a/agenda.html
+++ b/agenda.html
@@ -69,7 +69,7 @@
   <header>
     <nav id="navigation4" class="container navigation">
         <div class="nav-header">
-            <a class="nav-brand" href="home-3.html">
+            <a class="nav-brand" href="index.html">
                 <img src="img/logos/logo-mef.png" class="main-logo" style="width: 260px;" alt="logo" id="main_logo">
             </a>
             <div class="nav-toggle"></div>
