--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 <header>
   <nav id="navigation4" class="container navigation">
     <div class="nav-header">
-      <a class="nav-brand" href="home-3.html">
+      <a class="nav-brand" href="index.html">
         <img src="img/logos/logo-2.png" class="main-logo" alt="logo" id="main_logo">
       </a>
       <div class="nav-toggle"></div>
