--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <header>
     <nav id="navigation4" class="container navigation">
         <div class="nav-header">
-            <a class="nav-brand" href="home-3.html">
+            <a class="nav-brand" href="index.html">
                 <img src="img/logos/logo-mef.png" class="main-logo" style="width: 260px;" alt="logo" id="main_logo">
             </a>
             <div class="nav-toggle"></div>
@@ -222,7 +222,7 @@
         <img src="img/thumnail/service-4b.jpg" alt="image">
       </div>
       <div class="col-md-9 col-sm-9 col-12">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15634.239032986206!2d104.89801011044928!3d11.583385016334775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2skh!4v1652071029905!5m2!1sen!2skh" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15634.239032986206!2d104.89801011044928!3d11.583385016334775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2skh!4v1652071029905!5m2!1sen!2skh" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
       </div>
     </div>
   </div>
