--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-  <title>Contact</title>
+  <title>Welcome to DEBC</title>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="img/logos/logo-shortcut.png"/>
+  <link rel="shortcut icon" href="img/logos/logo-debc.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <!-- Bootstrap CSS-->
