--- a/documentation.html
+++ b/documentation.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Documentation</title>
+  <title>Welcome to DEBC</title>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="img/logos/logo-shortcut.png"/>
+  <link rel="shortcut icon" href="img/logos/logo-debc.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <!-- Bootstrap CSS-->
@@ -74,7 +74,7 @@
               </li>
               <li><a href="events.html">Events</a></li>
               <li><a href="projects.html">Projects</a></li>
-              <li><a href="member.html">Media Hub</a>
+              <li><a href="#">Media Hub</a>
                   <ul class="nav-dropdown">
                       <li><a href="news.html">News & Announcement</a></li>
                       <li><a href="documentation.html">Research articles</a></li>
