--- a/event-detail.html
+++ b/event-detail.html
@@ -92,7 +92,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-7 col-md-7 col-12 bg-white rounded">
-                <img src="http://via.placeholder.com/825x530" alt="img">
+                <img src="img/825x530.png" alt="img">
                 <div class="blog-title-box">
                     <h2>Personal Branding and Professional Networking Skills</h2>
                     <span><i class="fa fa-calendar"></i>Feb 19, 2018</span>
