--- a/index.html
+++ b/index.html
@@ -343,27 +343,27 @@
     </div>
     <div class="owl-carousel owl-theme clients" id="clients">
       <div class="item">
-        <img src="http://via.placeholder.com/155x75" alt="partner-image">
+        <img src="img/155x75.png" alt="partner-image">
       </div>
 
       <div class="item">
-        <img src="http://via.placeholder.com/155x75" alt="partner-image">
+        <img src="img/155x75.png" alt="partner-image">
       </div>
 
       <div class="item">
-        <img src="http://via.placeholder.com/155x75" alt="partner-image">
+        <img src="img/155x75.png" alt="partner-image">
       </div>
 
       <div class="item">
-        <img src="http://via.placeholder.com/155x75" alt="partner-image">
+        <img src="img/155x75.png" alt="partner-image">
       </div>
 
       <div class="item">
-        <img src="http://via.placeholder.com/155x75" alt="partner-image">
+        <img src="img/155x75.png" alt="partner-image">
       </div>
 
       <div class="item">
-        <img src="http://via.placeholder.com/155x75" alt="partner-image">
+        <img src="img/155x75.png" alt="partner-image">
       </div>
     </div>
   </div>
