--- a/news-detail.html
+++ b/news-detail.html
@@ -96,7 +96,7 @@
                     <h6>Personal Branding and Professional Networking Skills</h6>
                     <div class="section-heading-line"></div>
                 </div>
-                <img src="http://via.placeholder.com/825x530" alt="img">
+                <img src="img/825x530.png" alt="img">
                 <div class="blog-title-box">
                     
                     <span><i class="fa fa-calendar"></i>Feb 19, 2018</span>
